<resources>

    <string name="app_name">Axis Mobile</string>
    <string name="btn_login">Login</string>
    <string name="btn_setup">Setup</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_server_connect">Connect</string>
    <string name="btn_Inventory">Inventory</string>
    <string name="btn_Update_MinMax">Update Min Max</string>
    <string name="btn_firearm_search">Firearm Search</string>
    <string name="btn_product_search">Product Search</string>
    <string name="txt_product_search_header">Product Search By UPC</string>
    <string name="update_min_max_header">Update Min Max</string>
    <string name="btn_non_firearm_inventory">Non-Firearm\nInventory</string>
    <string name="btn_firearm_inventory">Firearm\nInventory</string>
    <string name="firearm_inventory_title">Firearm Inventory</string>
    <string name="text_group_name">Group Name</string>
    <string name="non_firearm_inventory_title">Inventory Groups</string>
    <string name="clear_upc_field">"Clear"</string>
    <string name="search_upc">"Search"</string>
    <string name="title_activity_navigation__drawer_">Navigation_Drawer_Activity</string>
    <string name="inventory_chooser_title">Inventory Select</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_clear_results">Clear Results</string>
    <string name="action_input_method">Input Method</string>
    <string name="title_activity_drawer_">Drawer_Activity</string>
    <string name="upc_title">UPC:</string>
    <string name="txt_prod_price_header">Price:</string>
    <string name="txt_desc_header">Description:</string>
    <string name="txt_qoh_header">QoH:</string>
    <string name="txt_min_header">Min:</string>
    <string name="txt_max_header">Max:</string>
    <string name="txt_inventory_scan_head">Scan Item</string>
    <string name="txt_count_qty_head">Count Qty:</string>
    <string name="btn_submit_count">Update</string>
    <string name="btn_count">Count</string>
    <string name="btn_firearm_scan_search">Search</string>
    <string name="txt_manufacturer_header">Manufacturer:</string>
    <string name="txt_upc_header">UPC:</string>
    <string name="txt_firearm_description">Description:</string>
    <string name="txt_serial_number_header">Serial Number:</string>
    <string name="txt_log_header">Log Number:</string>
    <string name="txt_status_header">Status:</string>
    <string name="txt_importer_header">Importer:</string>
    <string name="txt_model_header">Model:</string>
    <string name="txt_new_or_used_header">New / Used:</string>
    <string name="txt_type_of_action_header">Type Of Action:</string>
    <string name="txt_gauge_header">Gauge / Caliber:</string>
    <string name="txt_department_header">Department:</string>
    <string name="txt_manufacture_header">Manufacturer:</string>
    <string name="txt_qty_on_order_header">Qty On Order:</string>
    <string name="txt_qty_committed_header">Qty Committed:</string>

    <string name="product_cell_placeholder">Placeholder</string>
    <string name="txt_max_value">9999</string>
    <string name="txt_max_amount">9999.99</string>
    <string name="product_cell_active">Active</string>
    <string name="product_cell_is_firearm">Is Firearm</string>
    <string name="product_cell_serialized">Serialized\nNon-Firearm</string>
    <string name="product_cell_stock_item">Is Stock\nItem</string>

    <string name="txt_serial_number_radio">Serial Number</string>
    <string name="firearm_info_placeholder">placeholder</string>


    <string name="firearm_info_importer">Importer:</string>
    <string name="firearm_info_model">Model;</string>
    <string name="firearm_info_new_userd">New / Used:</string>
    <string name="firearm_info_action_type">Type Of Action:</string>
    <string name="txt_is_stock_short">Stock</string>


    <string name="txt_phone_model">PhoneModel</string>
    <string name="txt_bb_type_header">Select Firearm Type</string>
    <string name="txt_firearm_type">Firearm Type</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test__drawer">Test_Drawer</string>
    <string name="inv_stocktaking">Inventory Stocktaking</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>


</resources>
