<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_manufacture_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_manufacture_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_department_header" />

    <TextView
        android:id="@+id/txt_qty_committed_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="999"
        app:layout_constraintLeft_toRightOf="@+id/txt_qty_committed_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_max" />

    <TextView
        android:id="@+id/txt_qty_on_order_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="999"
        app:layout_constraintLeft_toRightOf="@+id/txt_qty_on_order_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_min_header" />

    <TextView
        android:id="@+id/txt_qty_committed_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_qty_committed_header"
        app:layout_constraintLeft_toRightOf="@+id/txt_qty_on_order_data"
        app:layout_constraintTop_toBottomOf="@+id/txt_max" />

    <TextView
        android:id="@+id/txt_qty_on_order_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_qty_on_order_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_qoh_header" />

    <TextView
        android:id="@+id/txt_department_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/txt_department_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_prod_desc" />

    <TextView
        android:id="@+id/txt_manufacture_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/txt_manufacture_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_department_data" />

    <TextView
        android:id="@+id/txt_department_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/txt_department_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_prod_desc" />

    <TextView
        android:id="@+id/txt_Product_UPC_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/upc_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_upc_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/txt_Product_UPC_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_description_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_desc_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_qty_on_order_header" />

    <TextView
        android:id="@+id/txt_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_prod_price_header"
        app:layout_constraintLeft_toRightOf="@+id/txt_upc_data"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_prod_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="999.99"
        app:layout_constraintLeft_toRightOf="@+id/txt_price_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_prod_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="TextView"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txt_description_"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_qty_committed_data" />

    <TextView
        android:id="@+id/txt_qoh_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_qoh_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Product_UPC_header" />

    <TextView
        android:id="@+id/txt_qoh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="999"
        app:layout_constraintLeft_toRightOf="@+id/txt_qoh_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_upc_data" />

    <TextView
        android:id="@+id/txt_min_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_min_header"
        app:layout_constraintLeft_toRightOf="@+id/txt_qoh"
        app:layout_constraintTop_toBottomOf="@+id/txt_price_title" />

    <TextView
        android:id="@+id/txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="999"
        app:layout_constraintLeft_toRightOf="@+id/txt_min_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_prod_price" />

    <TextView
        android:id="@+id/txt_max_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_max_header"
        app:layout_constraintLeft_toRightOf="@+id/txt_min"
        app:layout_constraintTop_toBottomOf="@+id/txt_prod_price" />

    <TextView
        android:id="@+id/txt_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="999"
        app:layout_constraintLeft_toRightOf="@+id/txt_max_header"
        app:layout_constraintTop_toBottomOf="@+id/txt_prod_price" />
</android.support.constraint.ConstraintLayout>